# Moftah

./: .gitignore  Makefile  Pipfile  README.md  config.json  moftah.py  pyproject.toml
db/: code.sql  passwords.db
project/: moftah.py
project/components/: PasswordAdder.py  PasswordNuker.py  PasswordRemover.py  PasswordViewer.py
project/components/tests/: RequirePass.py  SetupManager.py  addpass.py  manager.py  nuke.py  rempass.py  seepass.py
project/db/: passwords.db
project/log/: log.json
scripts/: install  uninstall
tests/: main.py
