[tool.poetry]
name = "Moftah"
version = "0.1.0"
description = "A password manager written in python"
authors = ["Horus64 <horus64.org>"]
license = "GPL v3 or later"

[tool.poetry.dependencies]
python = "^3.8"
PyQt6 = "^6.2.3"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
